[gd_scene load_steps=10 format=2]

[ext_resource path="res://Other/VariousEffects/LazerBeamThrow/LazerBeamThrow.gd" type="Script" id=1]
[ext_resource path="res://Other/VariousEffects/LazerBeamThrow/ParticleShape.png" type="Texture" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.190909 ), 0.0, 0.0, 0, 0, Vector2( 0.0565111, 0.985227 ), 2.19688, 2.19688, 0, 0, Vector2( 0.626536, 0.357955 ), 0.986666, 0.986666, 0, 0, Vector2( 0.992629, 0.130682 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.361702, 0.771277 )
colors = PoolColorArray( 0.0078125, 0, 1, 1, 0, 0.859375, 1, 1, 0.875, 0, 1, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.2, 0.369444, 0.552778 )
colors = PoolColorArray( 0.0112152, 0.0259936, 0.957031, 1, 0, 0.952941, 1, 0.913725, 1, 0, 0.913725, 0.584314, 1, 0.180392, 0.929412, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0339426, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.073107, 1 ), -3.61783, -3.61783, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.25
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="LazerBeamThrow" type="Line2D"]
points = PoolVector2Array( 0, 0, 17.852, 0, 103.968, 0.257858, 227.685, 0.87352 )
width = 20.0
width_curve = SubResource( 1 )
default_color = Color( 0.4, 0.501961, 1, 1 )
gradient = SubResource( 2 )
antialiased = true
script = ExtResource( 1 )

[node name="AttackTween" type="Tween" parent="."]

[node name="ReleaseTween" type="Tween" parent="."]

[node name="Particles" type="Particles2D" parent="."]
amount = 50
lifetime = 0.3
speed_scale = 0.25
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="DecayTimer" type="Timer" parent="."]
one_shot = true
[connection signal="tween_all_completed" from="ReleaseTween" to="." method="_on_ReleaseTween_tween_all_completed"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
